--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.17.0",
-    "nuxt": "^3.7.3",
-    "typescript": "^5.2.2"
+    "nuxt": "^3.7.3"
   }
 }
