--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.8.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
 }
